fix: chrome scroll bar and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #111;
+
+  
+
+}
+
+body::-webkit-scrollbar {
+  width: 0px;               /* width of the entire scrollbar */
 }
 
 code {
